# youtube_search

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: lib.rs  test_utils.rs
src/utils/: http_client.rs
src/youtube/: channel.rs  mod.rs  playlist.rs  video.rs
src/youtube/requests/: channel.rs  mod.rs  playlist.rs  video.rs
src/youtube/requests/utils/: mod.rs
